--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,35 @@ body {
     background-color: beige;
 
 }
+
+h1 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+}
+
+.container {
+    width: 800px;
+    max-width: 80%;
+    background-color: blanchedalmond;
+    border-radius: 2px;
+    padding: 8px;
+}
+
+.btn-grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 12px;
+    margin: 15px 0;
+}
+
+.btn {
+    background-color: white;
+    border: 2px solid rgb(49, 49, 49);
+    border-radius: 8px;
+    padding: 8px 16px;
+    color: black;
+    outline: none;
+}
